--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "cable_ready": "^5.0.0-pre1",
     "stimulus": "^2.0.0",
+    "stimulus_reflex": "^3.5.0-pre1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0"
