--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@rails/webpacker": "4.3.0",
     "cable_ready": "^5.0.0-pre1",
     "stimulus": "^2.0.0",
-    "stimulus_reflex": "^3.5.0-pre1",
+    "stimulus_reflex": "3.4.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0"
