--- a/package.json
+++ b/package.json
@@ -6,10 +6,25 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "@reduxjs/toolkit": "^1.6.0",
+    "axios": "^0.21.1",
     "cable_ready": "^5.0.0-pre1",
+    "immutable": "^4.0.0-rc.14",
+    "normalizr": "^3.6.1",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react_ujs": "^2.6.1",
+    "redux": "^4.1.0",
+    "redux-immutable": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "stimulus": "^2.0.0",
     "stimulus_reflex": "3.4.1",
     "turbolinks": "^5.2.0"
   },
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "devDependencies": {
+    "@babel/preset-react": "^7.14.5"
+  }
 }
